ok like everything changed ok

--- a/activities.tex
+++ b/activities.tex
@@ -1,8 +1,10 @@
 \section{Activities}
-\subsection{Member of UC Robotics Team (IGVC)\hfill Spring 2016}
+\subsection{Vice President of the UC Robotics Team (IGVC)\hfill 2016 --- 2018}
 \begin{itemize}
     \itemsep0em
-    \item Wrote python code which corrected distortion and transformed an input image using OpenCV
-    \item Assisted in manufacturing and construction of actual robot
-    \item Collaborated with other teammates in creating final AI code
+    \item Lead efforts to increase usage of version control, unit testing, and
+        documentation throughout the project through an intuitive contribution
+        process
+    \item Lead navigation and driver development of the robot
+    \item Educated other members on topics concerning all facets of the robot
 \end{itemize}
