--- a/education.tex
+++ b/education.tex
@@ -1,8 +1,6 @@
-\section{Education}
 \newcommand{\eduentry}[2]{%
     {#1 \hfill #2}%
 }
-\eduentry{University of Cincinnati}{Expected Graduation 2020}\newline
-\eduentry{Computer Science --- Junior}{GPA 3.859/4.000}\newline\newline
-\eduentry{Shawnee High School}{Graduated June 2015}\newline
-\eduentry{With Honors}{GPA 3.55/4}
+\\
+\eduentry{University of Cincinnati}{Graduating May 2019} \\
+\eduentry{Computer Science --- Senior}{}
