--- a/experience.tex
+++ b/experience.tex
@@ -1,24 +1,55 @@
 \newcommand{\expentry}[2]{%
-    \subsection{#1 \hfill #2}%
+    {#1} \hfill \mbox{#2}
 }
+
 \section{Experience}
-\expentry{Software Engineering Co-Op, Rockwell Automation, Mayfield Heights Ohio}{May 2016 --- Present}
+\expentry{Embedded Software Engineering Co-op, Xetron Corporation --- Northrop
+Grumman Corporation, Cincinnati Ohio}{January 2018 --- May 2018}
 \begin{itemize}
     \itemsep0em
-    \item Performed system administration for a 15+ server (60 VM) virtualized Windows environment
-    \item Worked on emerging internal private cloud environment
-    \item Quickly learned new tooling to continue server automation efforts
-    \item Fixed outstanding anomalies within a large codebase
-    \item Developed, documented, and managed an individual feature for inclusion into RSLogix5000
-    \item Developed AI code with OpenCV based vision for a robotic application
-    \item Collaborated with a large group of developers on a large feature team
+    \item Quickly learned embedded development on short notice without
+        assistance
+    \item Owned software design of a hardware component based on an ARM
+        processor
+    \item Designed sections of electrical circuitry and assisted in design
+        approvals
+    \item Designed low level I/O frameworks and drivers for communicating with
+        complex peripherals
 \end{itemize}
-\expentry{Freelance Development / System Administration}{2011 --- May 2016}
+Software Engineering Co-op, Rockwell Automation, Mayfield Heights Ohio
+\begin{flushright}
+May --- December 2016, May 2017 --- August 2017
+\end{flushright}
 \begin{itemize}
     \itemsep0em
-    \item Contracted by multiple Minecraft server companies to develop web and server modifications
-    \item Managed a group of developers using standard version control mechanisms, as well as proper dev-ops procedures
-    \item Architected a medium scale cloud application, wrote common API for use in add-on code for the network
-    \item Provided server optimization and management services, some instances increasing server capacity by +40\%
-    \item Contribute to open source projects, provide open source plugins for community (Over 5,000 downloads)
+    \item Developed new features as well as fixed issues in large C++ code base
+    \item Collaborated with a large feature team, working in both testing and
+        development
+    \item Performed system administration for a 15+ server (60 VM) virtualized
+        Windows/Linux hybrid environment
+\end{itemize}
+\expentry{Part Time Software Engineer, Cincinnati Children's Hospital Medical
+Center, CAGE Department, Cincinnati Ohio}{January 2017 --- May 2017}
+\begin{itemize}
+    \itemsep0em{}
+    \item Independently developed a C++ based genetic tool which replaced a Perl
+        script resulting in 4 times faster execution time and
+        \({\frac{1}{10}}^{th}\) the memory footprint
+    \item Assisted with development of a large-scale Java genetic database
+        program
+    \item Created high performance network driver code for use with genetic
+        database
+\end{itemize}
+\expentry{Free Time Achievements}{}
+\begin{itemize}
+    \item Created a `homelab' within my house that utilizes technologies such as
+        software defined networking, virtualization, LDAP and domain name
+        services
+    \item Created and maintain `NuVotifier', a DoS safe variant of popular
+        Minecraft server `plugin' that hosts raw TCP sockets and utilizes
+        cryptography
+    \item Created and maintain `MCAuthenticator', the first free and open source
+        TOTP (2fa) `plugin' for Minecraft servers
+    \item Identified and responsibly disclosed a DoS and UDP Reflection attack
+        in `Bungeecord', a popular Minecraft server proxy
 \end{itemize}
