--- a/header.tex
+++ b/header.tex
@@ -1,3 +1,3 @@
 \begin{center}
-    \textbf{{\large Joseph Hirschfeld} \\ hirschjb@mail.uc.edu / +1 (419) 230 0115}
+    \textbf{{\large Joseph Hirschfeld} \\ joe@ibj.io}
 \end{center}
