--- a/publicprojects.tex
+++ b/publicprojects.tex
@@ -1,1 +1,4 @@
-\subsection{\textbf{Github Profile:} https://github.com/Ichbinjoe}
+\noindent
+\textbf{Website:} https://ibj.io \\
+\noindent
+\textbf{Github Profile:} https://github.com/Ichbinjoe
